Tue Dec 01 23:53:22 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Add 'Query' to the unserialisation
	  context.  Fix an incorrect return type if a field was specified
	  for geolocation sorting which hadn't been indexed appropriately.

Tue Dec 01 12:42:35 GMT 2009  Richard Boulton <richard@tartarus.org>

	* MANIFEST.in,setup.py: Add xappy.cachemanger to distribution.

Tue Dec 01 11:47:46 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/query.py: Improve the serialisation of the result of
	  norm().

Mon Nov 30 12:10:19 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/searchconnection.py: Check that only one of docid and xapid
	  are set in get_document() before entering the while loop.  This
	  fixes a bug where the xapid got set later in the loop, so when a
	  DatabaseModifiedException error happened, the xapid was set the
	  next time around, triggering the error.

Thu Nov 26 17:29:47 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/query.py,xappy/unittests/cached_searches.py: Add
	  Query.merge_with_cached() to make applying a cached query easier.
	  Add a test for this.

Thu Nov 26 12:58:38 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/query.py,xappy/unittests/weight_action.py: Allow norm() to
	  take a maxweight parameter.  Update tests to check this works.

Thu Nov 26 12:54:33 GMT 2009  Richard Boulton <richard@tartarus.org>

	* utils/make_xappy_tarballs: Update revision numbers.

Thu Nov 26 01:32:29 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py,xappy/cachemanager/xapian_manager.py,
	  xappy/unittests/cachemanager.py: Add a new iter_query_strs()
	  method.

Thu Nov 26 00:17:57 GMT 2009  Richard Boulton <richard@tartarus.org>

	* xappy/cachemanager/generic.py,xappy/cachemanager/queryinvert.py:
	  Fully integrate the numpy-based inversion - caching its results
	  for faster application to many subdatabases, and factoring it out
	  as a MixIn.
