@@ -1,3 +1,11 @@
+Tue Dec 01 23:54:39 GMT 2009  Richard Boulton <richard@tartarus.org>
+
+	* xappy/query.py,xappy/unittests/query_serialise.py: Improve
+	  serialisation functions: flatten nested combinations into lists,
+	  and improved the serialised representations of these too.  Unify
+	  representation of queries joined with .compose(OP_AND) and those
+	  joined with &, and similarly for OP_OR and |.
+
 Tue Dec 01 23:53:22 GMT 2009  Richard Boulton <richard@tartarus.org>
 
 	* xappy/searchconnection.py: Add 'Query' to the unserialisation
